diretorio das imagens

--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
-  
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Open+Sans:wght@400;700&display=swap"
+    rel="stylesheet">
+
   <title>Treine me</title>
 </head>
+
 <body>
   <div class="page">
     <nav>
       <a id="logo" href="#">
-        <img src="./img/logo.svg" alt="Logo escrito treine.me">
+        <img src="./images/logo.svg" alt="Logo escrito treine.me">
       </a>
       <ul>
         <li><a href="#" title="Home">Home</a></li>
@@ -24,35 +27,36 @@
       </ul>
     </nav>
 
-    <main> 
+    <main>
       <section>
         <h1>Treinos <span>exclusivos</span> para você!</h1>
 
         <p>
-            Nós criamos  treios <strong>excluisivos para você.</strong><br>
-            Invista no seu corpo e <strong>tenha muito mais performance</strong> e <br> 
-            qualidade de vida
+          Nós criamos treios <strong>excluisivos para você.</strong><br>
+          Invista no seu corpo e <strong>tenha muito mais performance</strong> e <br>
+          qualidade de vida
         </p>
-        
+
         <button>
-          <img src="./img/whats.svg " alt=" icone do aplicativo whatsapp é um telefone">
+          <img src="./images/whats.svg " alt=" icone do aplicativo whatsapp é um telefone">
           Comece já
         </button>
 
       </section>
 
-      <img src="./img/img.png" alt="Desenho de um amulher pulando corda com bola depilates e anilha ao seu lado">
+      <img src="./images/img.png" alt="Desenho de um amulher pulando corda com bola depilates e anilha ao seu lado">
     </main>
 
     <footer>
-      Fale conosco no Instagram 
+      Fale conosco no Instagram
       <a href="https://instagram.com/treineme" target="_blank">
         @treine.me
       </a>
     </footer>
   </div>
 
-  <img id="balls" src="./img/balls.svg" alt="Bolinhas decorativas verdes no canto inferior direito da página.">
-  
+  <img id="balls" src="./images/balls.svg" alt="Bolinhas decorativas verdes no canto inferior direito da página.">
+
 </body>
+
 </html>
